[workspace]
members = ["programs/*"]
resolver = "2"

# Optimization settings to help with stack size limitations
[profile.dev]
overflow-checks = true
opt-level = 2

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
